<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
             android:icon="@drawable/homeee"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/syll"
            android:title="@string/menu_syllabus" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/feedback"
            android:title="@string/menu_Feedback" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/star"
            android:title="@string/menu_rateUs" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/mithshare"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>



</menu>
